--- a/index.html
+++ b/index.html
@@ -8,11 +8,54 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <a href="#"></a>
+    <header>
+        <!--tu będzie formularz-->
+        <nav></nav>
+        <ul>
+            <li>Principles Of HTML5 Game Design</li>
+            <li>Designing Emotional Interfaces Of The Future</li>
+            <li>Table Design Patterns On The Web</li>
+            <li>Introducing The Component-Based API</li>
+            <li>How Improving Website Performance Can Help Save The Planet</li>
+            <li>Designing A Font Based On Old Handwriting</li>
+        </ul>
+    </header>   
 
-    <div class="container">
+    <section>
 
+        <article>
+            <hgroup>
+                <h1>Designing Emotional Interfaces Of The Future</h1>
+                <h2>01</h2>
+            </hgroup>
+            <p>
+                When it comes to change, we tend to naturally resist it. The only real boundary we have are our brains telling us that things are best to be left as they’ve 
+                always been. In this article, Gleb Kuznetsov shares his thoughts and ideas of how interfaces will look like and what sort of extraordinary experiences we 
+                can expect in the near future.
+            </p>
+            <div></div>
+            <h2>Practical Examples Of Future Emotional Interfaces</h2>
+            <figure></figure>
+            <p>
+                How will interfaces look like in the future? Even though we do not have an answer to this question just yet, we can discuss what characteristics interfaces might have. 
+                In my opinion, I’m sure that we will eventually move away from interfaces full of menus, panels, buttons, and move towards more ‘natural interfaces’, i.e. interfaces 
+                that extend our bodies. The interfaces of the future will not be locked in a physical screen, but instead they will use the power of all five senses. Because of that, 
+                they will require a less learning curve — ideally, no learning curve at all.
+            </p>
+            <p>
+                Products that use voice as the primary interface are becoming more and more popular. Many of us use Amazon Echo and Apple Siri for daily routine activities such 
+                as setting an alarm clock or making an appointment. But a majority of voice interaction systems available on the market today still have a natural limitation: 
+                they do not take user emotions into account.
+            </p>
+            <a href="#"></a>
+        </article>
 
-    </div>
+    </section>
+
+    <footer>
+        <p></p>
+    </footer>
 
 <script type="text/javascript" src="scripts/scripts.js"></script>
 </body>
